# blackjack-rest-api

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  auto_play.sh  play.sh
.github/workflows/: build-test.yml  codeql-analysis.yml
client-res/: README.md  package-lock.json  package.json
client-res/.openapi-generator/: FILES
client-res/docs/: BetGetResponse.md  BetRequest.md  BetResponse.md  CreateDeckResponse.md  CreateGameRequest.md  CreateGameResponse.md  CreatePlayerRequest.md  CreatePlayerResponse.md  DefaultApi.md  GetPlayerResponse.md  HighscoreElementResponse.md  HighscoreResponse.md  HitResponse.md  InsuranceRequest.md  SplitResponse.md  StandResponse.md
client-res/src/: ApiClient.js  index.js  main.js  promisify.js
client-res/src/api/: DefaultApi.js
client-res/src/model/: BetGetResponse.js  BetRequest.js  BetResponse.js  CreateDeckResponse.js  CreateGameRequest.js  CreateGameResponse.js  CreatePlayerRequest.js  CreatePlayerResponse.js  GetPlayerResponse.js  HighscoreElementResponse.js  HighscoreResponse.js  HitResponse.js  InsuranceRequest.js  SplitResponse.js  StandResponse.js
client-res/static/: bundle.js  index.html  play.html
client-res/test/api/: DefaultApi.spec.js
client-res/test/model/: BetGetResponse.spec.js  BetRequest.spec.js  BetResponse.spec.js  CreateDeckResponse.spec.js  CreateGameRequest.spec.js  CreateGameResponse.spec.js  CreatePlayerRequest.spec.js  CreatePlayerResponse.spec.js  GetPlayerResponse.spec.js  HighscoreElementResponse.spec.js  HighscoreResponse.spec.js  HitResponse.spec.js  InsuranceRequest.spec.js  SplitResponse.spec.js  StandResponse.spec.js
src/: App.cpp  AppComponent.hpp
src/controller/: GameController.cpp  GameController.hpp  RootController.cpp  RootController.hpp  StaticController.cpp  StaticController.hpp
src/database/: CouchdbHighscoreClient.hpp  DBHighscore.cpp  DBHighscore.hpp  DTOs.hpp
src/dto/: DTOs.hpp
src/logic/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  GameLogic.cpp  GameLogic.hpp  HighscoreList.cpp  HighscoreList.hpp  Registries.cpp  Registries.hpp  util.h
test/: BlackJackUnitTest.cpp  BlackJackUnitTest.hpp  GameControllerDealerBlackJackTest.cpp  GameControllerDealerBlackJackTest.hpp  GameControllerInsuranceTest.cpp  GameControllerInsuranceTest.hpp  GameControllerSimpleWinTest.cpp  GameControllerSimpleWinTest.hpp  GameControllerTest.cpp  GameControllerTest.hpp  UnitTest.cpp  UnitTest.hpp  tests.cpp
test/app/: CreatePlayerApiTestClient.hpp  TestComponent.hpp
